--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "fse-prices",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.mjs",
   "private": true,
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon src/server.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alex Lillo",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "morgan": "^1.10.0"
